# FDAbench

./: .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
FDABench/: __init__.py
FDABench/agents/: __init__.py  multi_agent.py  planning_agent.py  reflection_agent.py  tool_use_agent.py
FDABench/core/: __init__.py  base_agent.py  dag_execution_mixin.py  token_tracker.py  tool_registry.py
FDABench/custom/: __init__.py  custom_agent.py  custom_tool.py  lotus_agent.py
FDABench/evaluation/: __init__.py  dag_evaluator.py  evaluation_tools.py  rubric_evaluator.py
FDABench/examples/: deepanalyze_adapter.py  docetl_environment.yml  lotus_environment.yml  palimpzest_environment.yml  test_deepanalyze_adapter.py  test_planning_agent_docetl_batch.py  test_planning_agent_lotus_batch.py  test_planning_agent_pz_batch.py
FDABench/fdabench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
FDABench/prompts/: __init__.py  prompts.py
FDABench/tools/: __init__.py  context_tools.py  file_tools.py  optimization_tools.py  schema_tools.py  search_tools.py  sql_tools.py  sql_tools_docetl.py  sql_tools_lotus.py  sql_tools_pz.py
FDABench/utils/: __init__.py  database_connection_manager.py  perplexity_search.py  test_utils.py  test_utils_baseline.py  vector_index_builder.py
PUDDING/: README.md  __init__.py  main.py
PUDDING/exploration/: __init__.py  branch_reflector.py  candidate_spawner.py
PUDDING/generators/: __init__.py  report_generator.py
PUDDING/graph/: __init__.py  builder.py  edges.py  nodes.py  runner.py  state.py
PUDDING/input_data/gold_sql_query/: bird133.sql
PUDDING/models/: __init__.py  dag_models.py  tree_models.py
PUDDING/tools/: __init__.py  dag_builder.py  external_tools.py  tool_executor.py
PUDDING/utils/: display.py  io.py
PUDDING/validation/: __init__.py  dag_annotator.py  single_source_validator.py
dataset/: test_multichoice.json  test_report.json  test_singlechoice.json
dataset_build/: README.md  __init__.py  external_tools.py  main.py
dataset_build/generators/: __init__.py  question_generator.py
dataset_build/graph/: builder.py  edges.py  nodes.py  runner.py
dataset_build/input_data/file_system/: example.md
dataset_build/input_data/gold_sql_result/: bird133.csv
dataset_build/input_data/original_data/: bird.jsonl
dataset_build/models/: __init__.py  dag_models.py  data_models.py
dataset_build/tools/: external_tools.py  multi_step_orchestrator.py  subtask_executor.py
dataset_build/utils/: __init__.py
examples/: run_multi_agent.py  run_planning_agent.py  run_reflection_agent.py  run_tooluse_agent.py
results/: submission.jsonl
sample/: sample_data.json
sample/regional_sales/: regional_sales.sqlite
